@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-10T02:37:00Z",
+  "timestamp" : "2022-09-10T08:30:06Z",
   "count_outdated" : 477,
   "uniques_outdated" : 303,
   "count" : 507,
-  "uniques" : 324,
+  "uniques" : 325,
   "clones" : [
     {
       "timestamp": "2022-08-27T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -74,6 +74,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-09-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
