@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-08-27T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -51,6 +51,11 @@
       "timestamp": "2022-09-09T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-09-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
