@@ -1,3 +1,11 @@
+2022-09-10T08:30:06Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3027312794
+* notice: last 14d: unq all: 11 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 303 477 / 324 507
+* notice: next accum: outdated-unq outdated-all / unq all: 303 477 / 325 507
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-27 2022-09-10]
+
 2022-09-10T02:37:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3026430859
 * notice: last 14d: unq all: 11 30
